--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-1-3">Ubicacion()</a></li>
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-2"><span class="theme-icon-holder me-2"><i class="fas fa-arrow-down"></i></span>Cajero</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-2-1">Registrar(DatosPersonales)</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-2-2">Productos()</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-2-2">Obtener()</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-2-3">Baja(int)</a></li>
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-box"></i></span>Servicio</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-1">Saldo()</a></li>
@@ -68,8 +68,6 @@
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-1">AplicaTransaccion(SolicitudTransaccion)</a></li>
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-5"><span class="theme-icon-holder me-2"><i class="fas fa-tools"></i></span>Reporte</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-5-1">Reporte(string)</a></li>
-				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-6"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Catalogos</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-6-1">Consulta</a></li>
 			    </ul>
 		    </nav><!--//docs-nav-->
 	    </div><!--//docs-sidebar-->
